[package]
name = "mfproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.3.1"
base64 = "0.13"
chrono = "0.4"
native-tls = "0.2"
rand_core = { version = "0.6", features = [ "std" ] }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
tiny_http = "0.9"
toml = "0.5"
url = "2.2"
